@@ -162,6 +162,9 @@
       + A shared pointer uses a reference count to keep track of how many 
         objects are still being referenced
 
+ - Cyclic dependencies:
+   + Be aware of cyclic dependencies! Bad practice, use with exreme caution
+
 ///////////////////////////////////////////////////////////////////////////////
 // #4 | OBJECT-ORIENTED PROGRAMMING (OOP)
 ///////////////////////////////////////////////////////////////////////////////
